# cpp-game

./: .gitignore  CMakeLists.txt  Readme.md  loop.txt
assets-to-copy/: ColorQuad.frag  basic_sprite_shader.frag  basic_sprite_shader_v2.frag
design/: collisions.fla  rotations.fla  scale_coords.fla
src/: main.cpp  shader.frag
src/includes/: MyClass.cpp  MyClass.h
src/includes/containers/: GameLevel.cpp  GameLevel.h
src/includes/creators/: SpriteSpawner.cpp  SpriteSpawner.h
src/includes/display/: ColorQuad.cpp  ColorQuad.h  ColorTriangle.cpp  ColorTriangle.h  Sprite.cpp  Sprite.h  SpriteGroup.cpp  SpriteGroup.h
src/includes/geom/: BoundBox.cpp  BoundBox.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
src/includes/loaders/: TextureLoader.cpp  TextureLoader.h
src/includes/shaders/: BasicShader.cpp  BasicShader.h
src/includes/timeUtils/: NumberUtils.cpp  NumberUtils.h  WonkyTimer.cpp  WonkyTimer.h
src/includes/vertexUtils/: Constants.h  VertexUtils.cpp  VertexUtils.h
